modules/ambassador/api-ingress.yaml
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: api-ingress
  namespace: default
  uid: c13cd976-428d-473a-a464-6fa4a30758ab
  resourceVersion: '376089'
  generation: 2
  creationTimestamp: '2022-07-04T15:35:08Z'
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/backend-protocol: HTTPS
spec:
  tls:
    - hosts:
        - dmsdev.datamatica.uk
      secretName: tls-secret-prd
  rules:
    - host: dmsdev.datamatica.uk
      http:
        paths:
          - path: /v1/
            pathType: ImplementationSpecific
            backend:
              service:
                name: edge-stack
                port:
                  number: 443
status:
  loadBalancer:
    ingress:
      - ip: ${public_ip}
